--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,11 @@
+// SCSS @use 규칙 (먼저 와야 함)
 @use 'utilities/variables';
 @use 'utilities/fonts';
 @use 'utilities/text';
 @use 'base/reset';
 @use 'base/common';
+
+// Tailwind CSS 지시문
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
